# Airship

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE
.github/workflows/: ctest.yml  formatting.yml
cmake/: clang-tidy.cmake  test.cmake
cmake/toolchains/: clang.cmake
examples/: CMakeLists.txt
examples/falling_triangles/: CMakeLists.txt  game.cpp  game.h
examples/shapes/: CMakeLists.txt  game.h  main.cpp
examples/snake/: CMakeLists.txt  addons.h  game.cpp  game.h  grid.h  snake.h  tallies.h
examples/snake/assets/: grass.frag  grass.vert
include/core/: application.h  convar.h  event.h  logging.h  utils.hpp  window.h
include/render/: color.h  renderer.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/core/: application.h  convar.h  event.h  input.h  instrumentation.h  logging.h  utils.hpp  window.h
lib/core/src/core/: application.cpp  event.cpp  instrumentation.cpp  window.cpp
lib/render/: CMakeLists.txt
lib/render/include/render/: color.h
lib/render/include/render/opengl/: renderer.h
lib/render/src/opengl/: renderer.cpp
lib/render/src/render/: color.cpp
lib/render/src/render/opengl/: renderer.cpp
lib/src/core/: CMakeLists.txt  event.cpp
lib/src/render/: CMakeLists.txt  color.cpp
lib/src/render/opengl/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h  application.test.cpp  convar.test.cpp  event.cpp  event.test.cpp  logging.test.cpp
src/core/include/core/: application.h  logging.h  window.h
src/render/: CMakeLists.txt  color.cpp  color.test.cpp  renderer.test.cpp
src/render/opengl/: renderer.cpp
test/: CMakeLists.txt  common.h  testapp.cpp
test/include/test/: common.h
test/src/test/: CMakeLists.txt  common.cpp
tests/: CMakeLists.txt  tests.cmake
tests/include/test/: common.h
tests/src/core/: CMakeLists.txt  application.test.cpp  convar.test.cpp  event.test.cpp  logging.test.cpp
tests/src/render/: CMakeLists.txt  color.test.cpp  renderer.test.cpp
tests/src/test/: CMakeLists.txt  common.cpp
